--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@formkit/tempo": "^0.1.2",
     "@tailwindcss/vite": "^4.1.7",
+    "date-fns": "^4.1.0",
     "flowbite": "^3.1.2",
     "graphql": "^16.11.0",
     "jwt-decode": "^4.0.0",
